Fixed spacing of "Post to Group" label [Issue #16]

--- a/bookface_auto.css
+++ b/bookface_auto.css
@@ -1,6 +1,6 @@
 /*
 	Name	   : Bookface Auto Color Mode
-	Version    : 1.5.9
+	Version    : 1.5.10
     Licence    : AGPL
     Created on : 09 Mar 2025
     Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
@@ -580,6 +580,8 @@
 			line-height: 32px;
 			top: 6px;
 			position:relative;
+			display: block;
+			padding-right: 30px;
 		}
 	#contact-edit-status-wrapper {
 		margin: 15px 0px !important;
@@ -3237,6 +3239,8 @@ header #banner {
               line-height: 32px;
               top: 6px;
               position:relative;
+			  display: block;
+			  padding-right: 30px;
        }
 #contact-edit-status-wrapper {
     margin: 15px 0px !important;
